# Brownfield-Cartographer

./: README.md  RECONNAISSANCE.md  app.py  cli_v2.py  pyproject.toml
cartography/: .last_loaded_repo.json
cartography/DataTalksClub__data-engineering-zoomcamp/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
cartography/EstifanosTeklay__Document-Intelligence-Refinery/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  module_graph.json  onboarding_brief.md
cartography/Roo-Code/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
cartography/dbt-labs__jaffle-shop/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  module_graph.json  onboarding_brief.md
cartography/jaffle-shop/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
cartography/mage-ai/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
cartography/mage-ai__mage-a/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
cartography/mitodl__ol-data-platform/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
cartography/ol-data-platform/: CODEBASE.md  analysis_summary.json  cartography_trace.jsonl  (+3 more)
src/: cli.py  orchestrator.py  orchestrator_v2.py  repo_manager.py
(+13 files in other folders)
