[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "A multi-agent codebase intelligence system for rapid FDE onboarding"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-sql>=0.2.0",
    "tree-sitter-yaml>=0.5.0",
    "sqlglot>=25.0.0",
    "networkx>=3.3",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "gitpython>=3.1.43",
    "PyYAML>=6.0.1",
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "jedi>=0.19.0",
]

[project.scripts]
cartographer = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
